🚀 Prepare static files for Vercel deployment
- Copy Flutter web build files to root directory
- Update vercel.json for static file deployment
- Add .vercelignore to exclude development files
- Update VERCEL_DEPLOY.md with static deployment guide
- Remove Flutter build dependency from Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "buildCommand": "flutter build web --release",
-  "outputDirectory": "build/web",
-  "installCommand": "echo 'Flutter web build'",
-  "framework": null
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ]
 }
