--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,31 @@
-name: valdi_portofolio
-description: A modern web portfolio with mini games using Flutter and Flame.
+name: valdi_portfolio
+description: Valdi Sanger - Modern Flutter Web Portfolio
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flame: ^1.16.0
-  cupertino_icons: ^1.0.2
+  
+  # UI & Styling
   google_fonts: ^6.1.0
-  url_launcher: ^6.2.0
+  flutter_staggered_animations: ^1.1.1
+  animated_text_kit: ^4.2.2
+  flutter_animate: ^4.2.0
+  
+  # Web Utils
+  url_launcher: ^6.2.1
+  universal_html: ^2.2.4
+  
+  # State Management
+  provider: ^6.1.1
+  
+  # Icons
+  flutter_svg: ^2.0.8
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -21,5 +34,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
   assets:
     - assets/images/
