🔧 Fix Flutter web deployment - resolve white screen issue
- Create proper Flutter web index.html template
- Rebuild Flutter web with correct configuration
- Copy Flutter web assets (canvaskit, JS files) to root
- Update vercel.json with Flutter-specific routing and headers
- Add COOP/COEP headers for canvaskit/wasm support
- This should resolve the white screen issue on Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,37 @@
 {
-  "version": 2,
-  "name": "faldy-portfolio",
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+    "version": 2,
+    "name": "faldy-portfolio",
+    "routes": [
+        {
+            "src": "/canvaskit/(.*)",
+            "dest": "/canvaskit/$1"
+        },
+        {
+            "src": "/assets/(.*)",
+            "dest": "/assets/$1"
+        },
+        {
+            "src": "/(.*\\.(js|css|woff2?|ttf|eot|ico|png|svg))",
+            "dest": "/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*\\.(js|wasm))",
+            "headers": [
+                {
+                    "key": "Cross-Origin-Embedder-Policy",
+                    "value": "require-corp"
+                },
+                {
+                    "key": "Cross-Origin-Opener-Policy",
+                    "value": "same-origin"
+                }
+            ]
+        }
+    ]
 }
