Configure Vercel for Flutter web deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "name": "faldy-portfolio",
+    "buildCommand": "flutter/bin/flutter build web --release",
+    "outputDirectory": "build/web",
+    "installCommand": "if cd flutter; then git pull && cd .. ; else git clone https://github.com/flutter/flutter.git; fi && ls && flutter/bin/flutter doctor && flutter/bin/flutter clean && flutter/bin/flutter config --enable-web && flutter/bin/flutter pub get",
     "routes": [
         {
             "src": "/canvaskit/(.*)",
@@ -11,7 +14,7 @@
             "dest": "/assets/$1"
         },
         {
-            "src": "/(.*\\.(js|css|woff2?|ttf|eot|ico|png|svg))",
+            "src": "/(.*\\.(js|css|woff2?|ttf|eot|ico|png|svg|wasm))",
             "dest": "/$1"
         },
         {
