Fix header patterns in vercel.json for better compatibility

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,20 @@
     ],
     "headers": [
         {
-            "source": "/(.*\\.(js|wasm))",
+            "source": "/main.dart.js",
+            "headers": [
+                {
+                    "key": "Cross-Origin-Embedder-Policy",
+                    "value": "require-corp"
+                },
+                {
+                    "key": "Cross-Origin-Opener-Policy",
+                    "value": "same-origin"
+                }
+            ]
+        },
+        {
+            "source": "/canvaskit/(.*)",
             "headers": [
                 {
                     "key": "Cross-Origin-Embedder-Policy",
